@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-20T16:19:51Z",
+  "timestamp" : "2022-08-21T08:18:50Z",
   "count_outdated" : 300,
   "uniques_outdated" : 150,
-  "count" : 315,
-  "uniques" : 163,
+  "count" : 316,
+  "uniques" : 164,
   "clones" : [
     {
       "timestamp": "2022-08-07T00:00:00Z",
@@ -49,6 +49,13 @@
     },
     {
       "timestamp": "2022-08-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
