@@ -1,5 +1,5 @@
 {
-  "count": 15,
+  "count": 16,
   "uniques": 10,
   "clones": [
     {
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2022-08-20T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-21T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
